# better-frameless-window

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
example/: main.cpp
src/: diagnostics.cpp  diagnostics.h  framelesswindow.cpp  framelesswindow.h  main.cpp  thememanager.cpp  thememanager.h  titlebar.cpp  titlebar.h  visualrefreshcoordinator.cpp  visualrefreshcoordinator.h  windoweffectwin.cpp  windoweffectwin.h  winutils.cpp  winutils.h
src/core/: windowvisualstate.cpp  windowvisualstate.h
src/platform/win32/: nativemessagerouter.cpp  nativemessagerouter.h  systemmenu.cpp  systemmenu.h  systemmenuwin.cpp  systemmenuwin.h  utils.cpp  utils.h  windowcommand.cpp  windowcommand.h  windowcommandwin.cpp  windowcommandwin.h  windoweffect.cpp  windoweffect.h  windoweffectwin.cpp  windoweffectwin.h  windowframe.cpp  windowframe.h  windowframewin.cpp  windowframewin.h  windowhittest.cpp  windowhittest.h  windowhittestwin.cpp  windowhittestwin.h  winnativemessagerouter.cpp  winnativemessagerouter.h  winutils.cpp  winutils.h
